[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Munro/munro-small.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Munro/munro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menus/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/begin.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fades"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 0.420448 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.231373 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
text = "PLANT STRANDING"
align = 1
valign = 1

[node name="Start" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -258.0
margin_bottom = -38.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "CLICK TO START
OR PRESS X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.0941176 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 188.0
margin_bottom = -202.0
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "F - TOGGLE FULLSCREEN
I - INVERT CAMERA CONTROLS
ESC - QUIT"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start3" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.278431 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "GAME BY @NYKOLAR FOR LD46"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fades"
anims/fades = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
[connection signal="gui_input" from="Start" to="." method="start_gui_input"]
[connection signal="mouse_entered" from="Start2" to="." method="_on_Start2_mouse_entered"]
[connection signal="mouse_exited" from="Start2" to="." method="_on_Start2_mouse_exited"]
[connection signal="gui_input" from="Start3" to="." method="_on_Start3_gui_input"]
